p2/practica2.output
Terminales no usados en la gramática

    WRONGCONTENT


Gramática

    0 $accept: S $end

    1 S: HEADER tags ENDOFFILE
    2  | WRONGHEADER
    3  | tags

    4 tags: startoutcontent STARTTAG content ENDTAG outcontent
    5     | startoutcontent STARTTAG ENDTAG outcontent
    6     | startoutcontent EMPTYTAG outcontent
    7     | startoutcontent STARTTAG content ENDTAG outcontent STARTTAG
    8     | startoutcontent STARTTAG ENDTAG outcontent STARTTAG
    9     | startoutcontent EMPTYTAG outcontent STARTTAG
   10     | startoutcontent STARTTAG content ENDTAG outcontent EMPTYTAG
   11     | startoutcontent STARTTAG ENDTAG outcontent EMPTYTAG
   12     | startoutcontent EMPTYTAG outcontent EMPTYTAG
   13     | startoutcontent STARTTAG content
   14     | startoutcontent STARTTAG
   15     | startoutcontent ENDTAG

   16 content: data
   17        | content data
   18        | STARTTAG content ENDTAG
   19        | STARTTAG ENDOFFILE
   20        | STARTTAG content ENDOFFILE
   21        | content STARTTAG content ENDOFFILE
   22        | content STARTTAG content ENDTAG

   23 data: STARTTAG ENDTAG
   24     | EMPTYTAG
   25     | CONTENT
   26     | WRONGTEXT
   27     | commenttype

   28 commenttype: COMMENT
   29            | WRONGCOMMENT
   30            | HEADER
   31            | WRONGHEADER

   32 startoutcontent: %empty
   33                | startoutcontent startoutcontent2

   34 startoutcontent2: COMMENT
   35                 | WRONGCOMMENT
   36                 | CONTENT
   37                 | WRONGTEXT

   38 outcontent: %empty
   39           | outcontent outcontent2

   40 outcontent2: COMMENT
   41            | WRONGCOMMENT
   42            | CONTENT
   43            | WRONGTEXT
   44            | HEADER
   45            | WRONGHEADER


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    HEADER <valString> (258) 1 30 44
    WRONGHEADER <valString> (259) 2 31 45
    WRONGTEXT <valString> (260) 26 37 43
    COMMENT <valString> (261) 28 34 40
    WRONGCOMMENT <valString> (262) 29 35 41
    STARTTAG <valString> (263) 4 5 7 8 9 10 11 13 14 18 19 20 21 22 23
    EMPTYTAG <valString> (264) 6 9 10 11 12 24
    ENDTAG <valString> (265) 4 5 7 8 10 11 15 18 22 23
    CONTENT <valString> (266) 25 36 42
    WRONGCONTENT <valString> (267)
    ENDOFFILE (268) 1 19 20 21


No terminales con las reglas donde aparecen

    $accept (14)
        on left: 0
    S (15)
        on left: 1 2 3
        on right: 0
    tags (16)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15
        on right: 1 3
    content (17)
        on left: 16 17 18 19 20 21 22
        on right: 4 7 10 13 17 18 20 21 22
    data (18)
        on left: 23 24 25 26 27
        on right: 16 17
    commenttype (19)
        on left: 28 29 30 31
        on right: 27
    startoutcontent (20)
        on left: 32 33
        on right: 4 5 6 7 8 9 10 11 12 13 14 15 33
    startoutcontent2 (21)
        on left: 34 35 36 37
        on right: 33
    outcontent (22)
        on left: 38 39
        on right: 4 5 6 7 8 9 10 11 12 39
    outcontent2 (23)
        on left: 40 41 42 43 44 45
        on right: 39


Estado 0

    0 $accept: . S $end
    1 S: . HEADER tags ENDOFFILE
    2  | . WRONGHEADER
    3  | . tags
    4 tags: . startoutcontent STARTTAG content ENDTAG outcontent
    5     | . startoutcontent STARTTAG ENDTAG outcontent
    6     | . startoutcontent EMPTYTAG outcontent
    7     | . startoutcontent STARTTAG content ENDTAG outcontent STARTTAG
    8     | . startoutcontent STARTTAG ENDTAG outcontent STARTTAG
    9     | . startoutcontent EMPTYTAG outcontent STARTTAG
   10     | . startoutcontent STARTTAG content ENDTAG outcontent EMPTYTAG
   11     | . startoutcontent STARTTAG ENDTAG outcontent EMPTYTAG
   12     | . startoutcontent EMPTYTAG outcontent EMPTYTAG
   13     | . startoutcontent STARTTAG content
   14     | . startoutcontent STARTTAG
   15     | . startoutcontent ENDTAG
   32 startoutcontent: . %empty  [WRONGTEXT, COMMENT, WRONGCOMMENT, STARTTAG, EMPTYTAG, ENDTAG, CONTENT]
   33                | . startoutcontent startoutcontent2

    HEADER       desplazar e ir al estado 1
    WRONGHEADER  desplazar e ir al estado 2

    $default  reduce usando la regla 32 (startoutcontent)

    S                ir al estado 3
    tags             ir al estado 4
    startoutcontent  ir al estado 5


Estado 1

    1 S: HEADER . tags ENDOFFILE
    4 tags: . startoutcontent STARTTAG content ENDTAG outcontent
    5     | . startoutcontent STARTTAG ENDTAG outcontent
    6     | . startoutcontent EMPTYTAG outcontent
    7     | . startoutcontent STARTTAG content ENDTAG outcontent STARTTAG
    8     | . startoutcontent STARTTAG ENDTAG outcontent STARTTAG
    9     | . startoutcontent EMPTYTAG outcontent STARTTAG
   10     | . startoutcontent STARTTAG content ENDTAG outcontent EMPTYTAG
   11     | . startoutcontent STARTTAG ENDTAG outcontent EMPTYTAG
   12     | . startoutcontent EMPTYTAG outcontent EMPTYTAG
   13     | . startoutcontent STARTTAG content
   14     | . startoutcontent STARTTAG
   15     | . startoutcontent ENDTAG
   32 startoutcontent: . %empty
   33                | . startoutcontent startoutcontent2

    $default  reduce usando la regla 32 (startoutcontent)

    tags             ir al estado 6
    startoutcontent  ir al estado 5


Estado 2

    2 S: WRONGHEADER .

    $default  reduce usando la regla 2 (S)


Estado 3

    0 $accept: S . $end

    $end  desplazar e ir al estado 7


Estado 4

    3 S: tags .

    $default  reduce usando la regla 3 (S)


Estado 5

    4 tags: startoutcontent . STARTTAG content ENDTAG outcontent
    5     | startoutcontent . STARTTAG ENDTAG outcontent
    6     | startoutcontent . EMPTYTAG outcontent
    7     | startoutcontent . STARTTAG content ENDTAG outcontent STARTTAG
    8     | startoutcontent . STARTTAG ENDTAG outcontent STARTTAG
    9     | startoutcontent . EMPTYTAG outcontent STARTTAG
   10     | startoutcontent . STARTTAG content ENDTAG outcontent EMPTYTAG
   11     | startoutcontent . STARTTAG ENDTAG outcontent EMPTYTAG
   12     | startoutcontent . EMPTYTAG outcontent EMPTYTAG
   13     | startoutcontent . STARTTAG content
   14     | startoutcontent . STARTTAG
   15     | startoutcontent . ENDTAG
   33 startoutcontent: startoutcontent . startoutcontent2
   34 startoutcontent2: . COMMENT
   35                 | . WRONGCOMMENT
   36                 | . CONTENT
   37                 | . WRONGTEXT

    WRONGTEXT     desplazar e ir al estado 8
    COMMENT       desplazar e ir al estado 9
    WRONGCOMMENT  desplazar e ir al estado 10
    STARTTAG      desplazar e ir al estado 11
    EMPTYTAG      desplazar e ir al estado 12
    ENDTAG        desplazar e ir al estado 13
    CONTENT       desplazar e ir al estado 14

    startoutcontent2  ir al estado 15


Estado 6

    1 S: HEADER tags . ENDOFFILE

    ENDOFFILE  desplazar e ir al estado 16


Estado 7

    0 $accept: S $end .

    $default  aceptar


Estado 8

   37 startoutcontent2: WRONGTEXT .

    $default  reduce usando la regla 37 (startoutcontent2)


Estado 9

   34 startoutcontent2: COMMENT .

    $default  reduce usando la regla 34 (startoutcontent2)


Estado 10

   35 startoutcontent2: WRONGCOMMENT .

    $default  reduce usando la regla 35 (startoutcontent2)


Estado 11

    4 tags: startoutcontent STARTTAG . content ENDTAG outcontent
    5     | startoutcontent STARTTAG . ENDTAG outcontent
    7     | startoutcontent STARTTAG . content ENDTAG outcontent STARTTAG
    8     | startoutcontent STARTTAG . ENDTAG outcontent STARTTAG
   10     | startoutcontent STARTTAG . content ENDTAG outcontent EMPTYTAG
   11     | startoutcontent STARTTAG . ENDTAG outcontent EMPTYTAG
   13     | startoutcontent STARTTAG . content
   14     | startoutcontent STARTTAG .  [$end, ENDOFFILE]
   16 content: . data
   17        | . content data
   18        | . STARTTAG content ENDTAG
   19        | . STARTTAG ENDOFFILE
   20        | . STARTTAG content ENDOFFILE
   21        | . content STARTTAG content ENDOFFILE
   22        | . content STARTTAG content ENDTAG
   23 data: . STARTTAG ENDTAG
   24     | . EMPTYTAG
   25     | . CONTENT
   26     | . WRONGTEXT
   27     | . commenttype
   28 commenttype: . COMMENT
   29            | . WRONGCOMMENT
   30            | . HEADER
   31            | . WRONGHEADER

    HEADER        desplazar e ir al estado 17
    WRONGHEADER   desplazar e ir al estado 18
    WRONGTEXT     desplazar e ir al estado 19
    COMMENT       desplazar e ir al estado 20
    WRONGCOMMENT  desplazar e ir al estado 21
    STARTTAG      desplazar e ir al estado 22
    EMPTYTAG      desplazar e ir al estado 23
    ENDTAG        desplazar e ir al estado 24
    CONTENT       desplazar e ir al estado 25

    $default  reduce usando la regla 14 (tags)

    content      ir al estado 26
    data         ir al estado 27
    commenttype  ir al estado 28


Estado 12

    6 tags: startoutcontent EMPTYTAG . outcontent
    9     | startoutcontent EMPTYTAG . outcontent STARTTAG
   12     | startoutcontent EMPTYTAG . outcontent EMPTYTAG
   38 outcontent: . %empty
   39           | . outcontent outcontent2

    $default  reduce usando la regla 38 (outcontent)

    outcontent  ir al estado 29


Estado 13

   15 tags: startoutcontent ENDTAG .

    $default  reduce usando la regla 15 (tags)


Estado 14

   36 startoutcontent2: CONTENT .

    $default  reduce usando la regla 36 (startoutcontent2)


Estado 15

   33 startoutcontent: startoutcontent startoutcontent2 .

    $default  reduce usando la regla 33 (startoutcontent)


Estado 16

    1 S: HEADER tags ENDOFFILE .

    $default  reduce usando la regla 1 (S)


Estado 17

   30 commenttype: HEADER .

    $default  reduce usando la regla 30 (commenttype)


Estado 18

   31 commenttype: WRONGHEADER .

    $default  reduce usando la regla 31 (commenttype)


Estado 19

   26 data: WRONGTEXT .

    $default  reduce usando la regla 26 (data)


Estado 20

   28 commenttype: COMMENT .

    $default  reduce usando la regla 28 (commenttype)


Estado 21

   29 commenttype: WRONGCOMMENT .

    $default  reduce usando la regla 29 (commenttype)


Estado 22

   16 content: . data
   17        | . content data
   18        | . STARTTAG content ENDTAG
   18        | STARTTAG . content ENDTAG
   19        | . STARTTAG ENDOFFILE
   19        | STARTTAG . ENDOFFILE
   20        | . STARTTAG content ENDOFFILE
   20        | STARTTAG . content ENDOFFILE
   21        | . content STARTTAG content ENDOFFILE
   22        | . content STARTTAG content ENDTAG
   23 data: . STARTTAG ENDTAG
   23     | STARTTAG . ENDTAG
   24     | . EMPTYTAG
   25     | . CONTENT
   26     | . WRONGTEXT
   27     | . commenttype
   28 commenttype: . COMMENT
   29            | . WRONGCOMMENT
   30            | . HEADER
   31            | . WRONGHEADER

    HEADER        desplazar e ir al estado 17
    WRONGHEADER   desplazar e ir al estado 18
    WRONGTEXT     desplazar e ir al estado 19
    COMMENT       desplazar e ir al estado 20
    WRONGCOMMENT  desplazar e ir al estado 21
    STARTTAG      desplazar e ir al estado 22
    EMPTYTAG      desplazar e ir al estado 23
    ENDTAG        desplazar e ir al estado 30
    CONTENT       desplazar e ir al estado 25
    ENDOFFILE     desplazar e ir al estado 31

    content      ir al estado 32
    data         ir al estado 27
    commenttype  ir al estado 28


Estado 23

   24 data: EMPTYTAG .

    $default  reduce usando la regla 24 (data)


Estado 24

    5 tags: startoutcontent STARTTAG ENDTAG . outcontent
    8     | startoutcontent STARTTAG ENDTAG . outcontent STARTTAG
   11     | startoutcontent STARTTAG ENDTAG . outcontent EMPTYTAG
   38 outcontent: . %empty
   39           | . outcontent outcontent2

    $default  reduce usando la regla 38 (outcontent)

    outcontent  ir al estado 33


Estado 25

   25 data: CONTENT .

    $default  reduce usando la regla 25 (data)


Estado 26

    4 tags: startoutcontent STARTTAG content . ENDTAG outcontent
    7     | startoutcontent STARTTAG content . ENDTAG outcontent STARTTAG
   10     | startoutcontent STARTTAG content . ENDTAG outcontent EMPTYTAG
   13     | startoutcontent STARTTAG content .  [$end, ENDOFFILE]
   17 content: content . data
   21        | content . STARTTAG content ENDOFFILE
   22        | content . STARTTAG content ENDTAG
   23 data: . STARTTAG ENDTAG
   24     | . EMPTYTAG
   25     | . CONTENT
   26     | . WRONGTEXT
   27     | . commenttype
   28 commenttype: . COMMENT
   29            | . WRONGCOMMENT
   30            | . HEADER
   31            | . WRONGHEADER

    HEADER        desplazar e ir al estado 17
    WRONGHEADER   desplazar e ir al estado 18
    WRONGTEXT     desplazar e ir al estado 19
    COMMENT       desplazar e ir al estado 20
    WRONGCOMMENT  desplazar e ir al estado 21
    STARTTAG      desplazar e ir al estado 34
    EMPTYTAG      desplazar e ir al estado 23
    ENDTAG        desplazar e ir al estado 35
    CONTENT       desplazar e ir al estado 25

    $default  reduce usando la regla 13 (tags)

    data         ir al estado 36
    commenttype  ir al estado 28


Estado 27

   16 content: data .

    $default  reduce usando la regla 16 (content)


Estado 28

   27 data: commenttype .

    $default  reduce usando la regla 27 (data)


Estado 29

    6 tags: startoutcontent EMPTYTAG outcontent .  [$end, ENDOFFILE]
    9     | startoutcontent EMPTYTAG outcontent . STARTTAG
   12     | startoutcontent EMPTYTAG outcontent . EMPTYTAG
   39 outcontent: outcontent . outcontent2
   40 outcontent2: . COMMENT
   41            | . WRONGCOMMENT
   42            | . CONTENT
   43            | . WRONGTEXT
   44            | . HEADER
   45            | . WRONGHEADER

    HEADER        desplazar e ir al estado 37
    WRONGHEADER   desplazar e ir al estado 38
    WRONGTEXT     desplazar e ir al estado 39
    COMMENT       desplazar e ir al estado 40
    WRONGCOMMENT  desplazar e ir al estado 41
    STARTTAG      desplazar e ir al estado 42
    EMPTYTAG      desplazar e ir al estado 43
    CONTENT       desplazar e ir al estado 44

    $default  reduce usando la regla 6 (tags)

    outcontent2  ir al estado 45


Estado 30

   23 data: STARTTAG ENDTAG .

    $default  reduce usando la regla 23 (data)


Estado 31

   19 content: STARTTAG ENDOFFILE .

    $default  reduce usando la regla 19 (content)


Estado 32

   17 content: content . data
   18        | STARTTAG content . ENDTAG
   20        | STARTTAG content . ENDOFFILE
   21        | content . STARTTAG content ENDOFFILE
   22        | content . STARTTAG content ENDTAG
   23 data: . STARTTAG ENDTAG
   24     | . EMPTYTAG
   25     | . CONTENT
   26     | . WRONGTEXT
   27     | . commenttype
   28 commenttype: . COMMENT
   29            | . WRONGCOMMENT
   30            | . HEADER
   31            | . WRONGHEADER

    HEADER        desplazar e ir al estado 17
    WRONGHEADER   desplazar e ir al estado 18
    WRONGTEXT     desplazar e ir al estado 19
    COMMENT       desplazar e ir al estado 20
    WRONGCOMMENT  desplazar e ir al estado 21
    STARTTAG      desplazar e ir al estado 34
    EMPTYTAG      desplazar e ir al estado 23
    ENDTAG        desplazar e ir al estado 46
    CONTENT       desplazar e ir al estado 25
    ENDOFFILE     desplazar e ir al estado 47

    data         ir al estado 36
    commenttype  ir al estado 28


Estado 33

    5 tags: startoutcontent STARTTAG ENDTAG outcontent .  [$end, ENDOFFILE]
    8     | startoutcontent STARTTAG ENDTAG outcontent . STARTTAG
   11     | startoutcontent STARTTAG ENDTAG outcontent . EMPTYTAG
   39 outcontent: outcontent . outcontent2
   40 outcontent2: . COMMENT
   41            | . WRONGCOMMENT
   42            | . CONTENT
   43            | . WRONGTEXT
   44            | . HEADER
   45            | . WRONGHEADER

    HEADER        desplazar e ir al estado 37
    WRONGHEADER   desplazar e ir al estado 38
    WRONGTEXT     desplazar e ir al estado 39
    COMMENT       desplazar e ir al estado 40
    WRONGCOMMENT  desplazar e ir al estado 41
    STARTTAG      desplazar e ir al estado 48
    EMPTYTAG      desplazar e ir al estado 49
    CONTENT       desplazar e ir al estado 44

    $default  reduce usando la regla 5 (tags)

    outcontent2  ir al estado 45


Estado 34

   16 content: . data
   17        | . content data
   18        | . STARTTAG content ENDTAG
   19        | . STARTTAG ENDOFFILE
   20        | . STARTTAG content ENDOFFILE
   21        | . content STARTTAG content ENDOFFILE
   21        | content STARTTAG . content ENDOFFILE
   22        | . content STARTTAG content ENDTAG
   22        | content STARTTAG . content ENDTAG
   23 data: . STARTTAG ENDTAG
   23     | STARTTAG . ENDTAG
   24     | . EMPTYTAG
   25     | . CONTENT
   26     | . WRONGTEXT
   27     | . commenttype
   28 commenttype: . COMMENT
   29            | . WRONGCOMMENT
   30            | . HEADER
   31            | . WRONGHEADER

    HEADER        desplazar e ir al estado 17
    WRONGHEADER   desplazar e ir al estado 18
    WRONGTEXT     desplazar e ir al estado 19
    COMMENT       desplazar e ir al estado 20
    WRONGCOMMENT  desplazar e ir al estado 21
    STARTTAG      desplazar e ir al estado 22
    EMPTYTAG      desplazar e ir al estado 23
    ENDTAG        desplazar e ir al estado 30
    CONTENT       desplazar e ir al estado 25

    content      ir al estado 50
    data         ir al estado 27
    commenttype  ir al estado 28


Estado 35

    4 tags: startoutcontent STARTTAG content ENDTAG . outcontent
    7     | startoutcontent STARTTAG content ENDTAG . outcontent STARTTAG
   10     | startoutcontent STARTTAG content ENDTAG . outcontent EMPTYTAG
   38 outcontent: . %empty
   39           | . outcontent outcontent2

    $default  reduce usando la regla 38 (outcontent)

    outcontent  ir al estado 51


Estado 36

   17 content: content data .

    $default  reduce usando la regla 17 (content)


Estado 37

   44 outcontent2: HEADER .

    $default  reduce usando la regla 44 (outcontent2)


Estado 38

   45 outcontent2: WRONGHEADER .

    $default  reduce usando la regla 45 (outcontent2)


Estado 39

   43 outcontent2: WRONGTEXT .

    $default  reduce usando la regla 43 (outcontent2)


Estado 40

   40 outcontent2: COMMENT .

    $default  reduce usando la regla 40 (outcontent2)


Estado 41

   41 outcontent2: WRONGCOMMENT .

    $default  reduce usando la regla 41 (outcontent2)


Estado 42

    9 tags: startoutcontent EMPTYTAG outcontent STARTTAG .

    $default  reduce usando la regla 9 (tags)


Estado 43

   12 tags: startoutcontent EMPTYTAG outcontent EMPTYTAG .

    $default  reduce usando la regla 12 (tags)


Estado 44

   42 outcontent2: CONTENT .

    $default  reduce usando la regla 42 (outcontent2)


Estado 45

   39 outcontent: outcontent outcontent2 .

    $default  reduce usando la regla 39 (outcontent)


Estado 46

   18 content: STARTTAG content ENDTAG .

    $default  reduce usando la regla 18 (content)


Estado 47

   20 content: STARTTAG content ENDOFFILE .

    $default  reduce usando la regla 20 (content)


Estado 48

    8 tags: startoutcontent STARTTAG ENDTAG outcontent STARTTAG .

    $default  reduce usando la regla 8 (tags)


Estado 49

   11 tags: startoutcontent STARTTAG ENDTAG outcontent EMPTYTAG .

    $default  reduce usando la regla 11 (tags)


Estado 50

   17 content: content . data
   21        | content . STARTTAG content ENDOFFILE
   21        | content STARTTAG content . ENDOFFILE
   22        | content . STARTTAG content ENDTAG
   22        | content STARTTAG content . ENDTAG
   23 data: . STARTTAG ENDTAG
   24     | . EMPTYTAG
   25     | . CONTENT
   26     | . WRONGTEXT
   27     | . commenttype
   28 commenttype: . COMMENT
   29            | . WRONGCOMMENT
   30            | . HEADER
   31            | . WRONGHEADER

    HEADER        desplazar e ir al estado 17
    WRONGHEADER   desplazar e ir al estado 18
    WRONGTEXT     desplazar e ir al estado 19
    COMMENT       desplazar e ir al estado 20
    WRONGCOMMENT  desplazar e ir al estado 21
    STARTTAG      desplazar e ir al estado 34
    EMPTYTAG      desplazar e ir al estado 23
    ENDTAG        desplazar e ir al estado 52
    CONTENT       desplazar e ir al estado 25
    ENDOFFILE     desplazar e ir al estado 53

    data         ir al estado 36
    commenttype  ir al estado 28


Estado 51

    4 tags: startoutcontent STARTTAG content ENDTAG outcontent .  [$end, ENDOFFILE]
    7     | startoutcontent STARTTAG content ENDTAG outcontent . STARTTAG
   10     | startoutcontent STARTTAG content ENDTAG outcontent . EMPTYTAG
   39 outcontent: outcontent . outcontent2
   40 outcontent2: . COMMENT
   41            | . WRONGCOMMENT
   42            | . CONTENT
   43            | . WRONGTEXT
   44            | . HEADER
   45            | . WRONGHEADER

    HEADER        desplazar e ir al estado 37
    WRONGHEADER   desplazar e ir al estado 38
    WRONGTEXT     desplazar e ir al estado 39
    COMMENT       desplazar e ir al estado 40
    WRONGCOMMENT  desplazar e ir al estado 41
    STARTTAG      desplazar e ir al estado 54
    EMPTYTAG      desplazar e ir al estado 55
    CONTENT       desplazar e ir al estado 44

    $default  reduce usando la regla 4 (tags)

    outcontent2  ir al estado 45


Estado 52

   22 content: content STARTTAG content ENDTAG .

    $default  reduce usando la regla 22 (content)


Estado 53

   21 content: content STARTTAG content ENDOFFILE .

    $default  reduce usando la regla 21 (content)


Estado 54

    7 tags: startoutcontent STARTTAG content ENDTAG outcontent STARTTAG .

    $default  reduce usando la regla 7 (tags)


Estado 55

   10 tags: startoutcontent STARTTAG content ENDTAG outcontent EMPTYTAG .

    $default  reduce usando la regla 10 (tags)
